add mermaid diagrams sitewide, fix stale/dead content
- convert ascii diagrams to mermaid (aeron, disruptor, system_design, fx)
- add collapsible deep-dive notes to java thread pages
- fix shutdown.md: stale SigInt example, missing --add-opens gotcha
- fix mislabeled FIX message in rfs-vs-rfq.md
- remove dead kdb/aeron_mdc nav entries, fix broken linux link

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>